--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/javax.inject.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jsr305-1.3.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/simple-xml-2.6.4.jar"/>
+	<classpathentry kind="lib" path="libs/mockito-all-1.9.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
